[package]
name = "datastreamer"
version = "0.1.0"
authors = ["jonathan.colwell <github@superflaco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
hex = "0.4.0"
crc = "1.8.1"
tsutil= { path = "../tsutil" }